# rust-file-manager

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: helpers.rs  main.rs
ui/: files.css  index.html  main.css  main.js  main.ts  styles.css
ui/css/: files.css  home.css  main.css  settings.css  styles.css
ui/src/: helper.ts  main.ts
