[package]
name = "test-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5.1.2"
trash = "4.1.1"
chrono = "0.4.38"
sysinfo = "0.30.12"
fs_extra = "1.2.0"
imagesize = "0.12.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
walkdir = "2"
lazy_static = "1.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
